GC Dental/src/objects/Demo_Product__c.object
<CustomObject>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demo_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>is_active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Demo Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Executive__c</columns>
        <columns>From__c</columns>
        <columns>To__c</columns>
        <columns>is_active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>NAME</columns>
        <columns>Sales_Executive__c</columns>
        <columns>From__c</columns>
        <columns>To__c</columns>
        <columns>is_active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>From__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>To__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month</label>
    </listViews>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Demo Product No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Products</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>